# antivirus_BSO

./: CMakeLists.txt  MD5.cpp  MD5.h  main.cpp  raport.md  todo.txt
headers/: CryptoFuntions.h  DataManagement.h  FileManagement.h  MD5.h  Main.h  Quarantine.h  Scanner.h  data_management.h  main.h  monitor.h  quarantine.h  scanner.h  thread_safe_queue.h  yara.h
libs/: CLI11.hpp
resources/: bigHashes.txt  hashes.txt  sampleHashDatabase.txt  yaraEx.yara  yaraMaliciousFile.txt
src/: CryptoFuntions.cpp  DataManagement.cpp  FIleManagement.cpp  FileManagement.cpp  MD5.cpp  Main.cpp  Quarantine.cpp  Scanner.cpp  crypto_functions.cpp  data_management.cpp  main.cpp  monitor.cpp  quarantine.cpp  scanner.cpp  yara.cpp
yaracpp/include/yaracpp/: yaracpp.h
yaracpp/include/yaracpp/types/: yara_match.h  yara_meta.h  yara_rule.h
yaracpp/include/yaracpp/yara_detector/: yara_detector.h
yaracpp/src/: CMakeLists.txt
yaracpp/src/types/: yara_match.cpp  yara_meta.cpp  yara_rule.cpp
yaracpp/src/yara_detector/: yara_detector.cpp
